# fabrique-test-case

./: .env.dev  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
config/: settings.py  urls.py  wsgi.py
polls/: admin.py  fields.py  models.py  permissions.py  serializers.py  urls.py  views.py
polls/management/commands/: createadmin.py  gendata.py
polls/migrations/: 0001_initial.py
